# safent-runtime

./: .containerignore  .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  get-lumen.ps1  get-lumen.sh  get-safent.ps1  get-safent.sh  lumen  lumen.ps1  pyproject.toml  safent  safent.ps1
.github/workflows/: agents-os-edition.yml  publish-image.yml  secret-scan.yml
.specify/memory/: constitution.md
apps/agentic_panel/: __init__.py  agentic_panel.py
apps/first-boot-wizard/: wizard_cli.py
desktop/: .gitignore  README.md  dev-headless-selftest.sh  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  remote-ui.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
dist-mac/: INSTALL-mac.md  install-lumen-mac.sh  install-safent-mac.sh
dist-win/: INSTALL-win.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  novnc.d.ts  styles.css
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts  inbound-delegations.test.ts  runtime-stream.test.ts  types.ts
frontend/src/components/: AgentLiveWatch.tsx  ApprovalCard.tsx  ConfirmDialog.tsx  ContextPanel.tsx  InboundDelegationCard.test.tsx  InboundDelegationCard.tsx  Layout.tsx  MfaEnroll.tsx  MfaModal.tsx  PendingApprovalsInChat.tsx  TeachModal.tsx  TeachPanel.tsx  VncView.tsx
frontend/src/hooks/: useChat.ts  useFeatures.ts  usePendingApprovals.ts  usePendingInboundDelegations.ts
frontend/src/lib/: agentRoster.ts  folderBridge.ts  i18n.ts  skills.ts  token.ts
frontend/src/styles/: tokens.css
frontend/src/views/: AjustesView.module.css  AjustesView.tsx  ArchivosView.module.css  (+28 more)
ops/agent-cage/: Containerfile.openshell-build  EXTRACTION-PLAN.md  OPENSHELL-INTEGRATION.md  cage.toml  e2e_exploit.py
ops/agents-os-edition/: README.md
ops/container/: Containerfile  SECURITY.md  build.sh  install.sh  run-lumen.sh  run-safent.sh
ops/teach/: lumen-teach-recorder.js
scripts/: build.sh
specs/001-unified-governance/: research.md
src/hermes/: __init__.py  logging_pii_filter.py  logging_setup.py
tests/capabilities/: test_broker_gates.py  test_capability_registry.py  test_computer_use_loop.py  test_hitl_token.py  test_install_tools.py  test_tsa_external_anchor.py
tests/contract/: test_audio_capture_port.py  test_remote_desktop_gateway_port.py  test_replay_preview_port.py  test_skill_package_port.py  test_training_session_port.py  test_transcription_port.py  test_workspace_lifecycle_port.py
tests/integration/: test_boot_graph.py  test_chat_fail_hard.py  test_chat_workitem_roundtrip.py  test_input_isolation.py  test_long_task_nonblocking.py  test_reconcile_orphans.py  test_retry_semantics.py  test_runtime_entrypoint.py  test_schema_005.py  test_self_enqueue_depth_cap.py  test_shell_session_wrapper.py  test_task_stream_socket.py
tests/providers/: test_catalog.py  test_openai_resolution.py  test_security.py
tests/security/: test_agent_access_scope_floor.py  test_anti_autopirateo_denylist.py  test_approval_gate_totp.py  test_audit_chain_integrity.py  test_audit_signing_key.py  test_broker_gate_hardening_iter3.py  test_broker_os_native_route.py  test_chat_taint_forces_hitl.py  test_composio_read_broker_route.py  test_confinement_assert_unprivileged.py  test_confused_deputy_remediation.py  test_consent_token_concurrent.py  test_dbus_runtime1_contract.py  test_dbus_sender_uid_race.py  test_dbus_sender_uid_spoofing.py  test_dbus_wiring.py  test_delegation_provenance.py  test_denylist_canonical_hotpath.py  test_enqueued_by_authority.py  test_host_operation_broker_route.py  test_kernel_confinement_adapters.py  test_killswitch_concurrent.py  test_mcp_broker_route.py  test_no_passthrough_route.py  test_nous_sequential_gate.py  test_os_native_readonly.py  test_os_native_write_hitl.py  test_public_contracts_frozen.py  test_security_hardening_wave3.py  test_skill_signature_hardening.py  test_terminal_self_jailbreak.py  test_trigger_default_deny.py  test_trigger_enqueued_by.py  test_two_mode_security_kernel.py
tests/security_center/: test_policy_service.py  test_scan_service.py  test_scanners.py
tests/tasks/: test_agent_loop.py  test_chat_dbus_streaming.py  test_chat_pipeline_bugs.py  test_hallucinated_success.py  test_kill_switch.py  test_pending_delegations_repo.py  test_reasoning_callback_streaming.py  test_reconciliation.py  test_streaming_fixes.py  test_timer_source_run_forever.py  test_work_item_state_machine.py  test_work_queue.py  test_worker_pool_concurrency.py
tests/tui/: test_lumen_terminal.py  test_safent_terminal.py
tests/unit/: conftest.py  test_active_provider_service.py  test_agent_create_honors_id.py  test_agent_dialog_autonomy.py  test_approval_tier_routing.py  test_autonomy_level.py  test_bootc_updater_service.py  test_browser_admission_guard.py  test_capability_tool_specs.py  test_community_roster_seeding.py  test_composio_client.py  test_composio_config_source.py  test_composio_tool_specs.py  test_composio_tools_registry.py  test_composition_root_wiring.py  test_conversation_agent_id.py  test_daemon_liveness_wiring.py  test_dbus_account_verb.py  test_dbus_agent_governance.py  test_dbus_composition_root_wiring.py  test_dbus_consent_verbs.py  test_dbus_conversation_verbs.py  test_dbus_desktop_methods.py  test_dbus_hub_search_cancel.py  test_dbus_memory_verbs.py  test_dbus_provider_verbs.py  test_dbus_runtime_client.py  test_dbus_skill_governance.py  test_decision_context.py  test_decision_context_builder.py  test_decision_context_builder_trust.py  test_execution_contexts_schema.py  test_f3_unified_skill_store.py  test_f4_gepa_evolution.py  test_f4_memory_confinement.py  test_f4_skill_store_wiring.py  test_fake_reasoning_engine.py  test_idle_efficiency.py  test_input_surface_key.py  test_integrations_repo.py  (+37 more)
tests/vm/: test_boot_inversion_vm.py
(+1137 files in other folders)
